changes to code

--- a/DataProcessing.ipynb
+++ b/DataProcessing.ipynb
@@ -149,12 +149,12 @@
    "source": [
     "scaler = StandardScaler()\n",
     "rfm_scaled = scaler.fit_transform(rfm)\n",
-    "# Apply K-Means Clustering\n",
+    "\n",
     "kmeans = KMeans(n_clusters=6, random_state=42)\n",
     "kmeans.fit(rfm_scaled)\n",
     "rfm['Cluster'] = kmeans.labels_\n",
     "\n",
-    "# Check the distribution of clusters\n",
+    "\n",
     "print(rfm['Cluster'].value_counts())"
    ]
   },
@@ -206,14 +206,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assuming df is your cleaned DataFrame\n",
+    "\n",
     "last_date = datetime(2011, 12, 9)\n",
     "\n",
-    "# Recalculate RFM with simplified column names\n",
+    "\n",
     "rfm = DF.groupby('CustomerID').agg(\n",
     "    Recency=('InvoiceDate', lambda x: ((last_date - x.max()).days) / 30),\n",
     "    Frequency=('InvoiceNo', 'count'),\n",
-    "    MonetaryValue=('UnitPrice', 'sum')  # Adjust according to how you want to calculate Monetary\n",
+    "    MonetaryValue=('UnitPrice', 'sum')  \n",
     ").reset_index()\n",
     "\n",
     "# Calculate IQR for Frequency and MonetaryValue\n",
@@ -251,7 +251,7 @@
     "from sklearn.cluster import KMeans\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Assume rfm_scaled contains your normalized RFM values\n",
+    "\n",
     "rfm_scaled = rfm_scaled_df[['Recency_scaled', 'Frequency_scaled', 'MonetaryValue_scaled']].to_numpy()\n",
     "\n",
     "# Calculating WCSS for different numbers of clusters\n",
@@ -306,7 +306,7 @@
     "\n",
     "# Silhouette score calculation\n",
     "silhouette_scores = []\n",
-    "for i in range(2, 11):  # silhouette_score is not defined for a single cluster\n",
+    "for i in range(2, 11):  \n",
     "    kmeans = KMeans(n_clusters=i, init='k-means++', max_iter=300, n_init=10, random_state=0)\n",
     "    cluster_labels = kmeans.fit_predict(rfm_scaled)\n",
     "    score = silhouette_score(rfm_scaled, cluster_labels)\n",
@@ -354,20 +354,20 @@
     }
    ],
    "source": [
-    "# Choose the number of clusters as found from the Elbow Method\n",
+    "\n",
     "optimal_clusters = 2\n",
     "\n",
-    "# Applying K-Means with the optimal number of clusters\n",
+    "\n",
     "kmeans = KMeans(n_clusters=optimal_clusters, init='k-means++', max_iter=300, n_init=10, random_state=0)\n",
     "cluster_labels = kmeans.fit_predict(rfm_scaled)\n",
     "\n",
-    "# Adding cluster labels to the original rfm DataFrame\n",
+    "\n",
     "rfm_filtered['Cluster'] = cluster_labels\n",
     "\n",
-    "# Checking the size of each cluster\n",
+    "\n",
     "print(rfm_filtered['Cluster'].value_counts())\n",
     "\n",
-    "# Analyzing the centroids\n",
+    "\n",
     "centroids = pd.DataFrame(scaler.inverse_transform(kmeans.cluster_centers_), columns=['Recency', 'Frequency', 'MonetaryValue'])\n",
     "print(centroids)\n"
    ]
@@ -409,7 +409,7 @@
     "\n",
     "wcss = []\n",
     "silhouette_scores = []\n",
-    "for i in range(2, 11): # Start from 2 clusters since silhouette score cannot be calculated with a single cluster\n",
+    "for i in range(2, 11): \n",
     "    kmeans = KMeans(n_clusters=i, init='k-means++', max_iter=300, n_init=10, random_state=0)\n",
     "    cluster_labels = kmeans.fit_predict(rfm_scaled)\n",
     "    wcss.append(kmeans.inertia_)\n",
@@ -417,7 +417,6 @@
     "    silhouette_scores.append(silhouette_avg)\n",
     "    print(f\"Number of clusters: {i}, WCSS: {kmeans.inertia_:.2f}, Silhouette Score: {silhouette_avg:.2f}\")\n",
     "\n",
-    "# Plotting the results for visual inspection\n",
     "plt.figure(figsize=(14, 7))\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.plot(range(2, 11), wcss, marker='o')\n",
@@ -479,22 +478,22 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "# Assuming rfm_scaled_df is your DataFrame after initial cleaning and standard scaling\n",
     "\n",
-    "# Experiment with different scalers\n",
+    "\n",
+    "\n",
     "scaler = MinMaxScaler()\n",
     "rfm_scaled = scaler.fit_transform(rfm[['Recency', 'Frequency', 'MonetaryValue']])\n",
     "\n",
-    "# Finding the optimal number of clusters using silhouette score\n",
+    "\n",
     "silhouette_scores = []\n",
-    "for i in range(2, 11):  # Starting from 2 to avoid error with silhouette score calculation\n",
+    "for i in range(2, 11):  \n",
     "    kmeans = KMeans(n_clusters=i, init='k-means++', max_iter=300, n_init=10, random_state=42)\n",
     "    clusters = kmeans.fit_predict(rfm_scaled)\n",
     "    score = silhouette_score(rfm_scaled, clusters)\n",
     "    silhouette_scores.append(score)\n",
     "    print(f\"Clusters: {i}, Silhouette Score: {score:.2f}\")\n",
     "\n",
-    "# Plotting silhouette scores\n",
+    "\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.plot(range(2, 11), silhouette_scores, marker='o')\n",
     "plt.xlabel('Number of clusters')\n",
@@ -502,8 +501,8 @@
     "plt.title('Silhouette Score for Various Number of Clusters')\n",
     "plt.show()\n",
     "\n",
-    "# Choose the number of clusters with the highest silhouette score\n",
-    "optimal_clusters = np.argmax(silhouette_scores) + 2  # Adjusting for the range starting at 2\n",
+    "\n",
+    "optimal_clusters = np.argmax(silhouette_scores) + 2  \n",
     "print(f\"Optimal Number of Clusters: {optimal_clusters}\")\n",
     "\n",
     "# Re-run K-Means with the optimal number of clusters\n",
@@ -554,7 +553,7 @@
     "    score = silhouette_score(rfm_pca, gmm_clusters)\n",
     "    print(f\"Clusters: {i}, Silhouette Score: {score:.2f}\")\n",
     "\n",
-    "# Choose an optimal number based on silhouette scores and business understanding\n",
+    "\n",
     "\n",
     "# Apply GMM with the chosen number of components\n",
     "optimal_n_components = 4  \n",
@@ -602,13 +601,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "# Assuming rfm_scaled is your scaled RFM data\n",
-    "# rfm_pca is the PCA-transformed RFM data from your previous step\n",
     "\n",
-    "# 1. Reevaluate PCA's Impact on Clustering Performance\n",
     "silhouette_scores_pca = {}\n",
-    "n_components_range = range(1, min(5, rfm_scaled.shape[1]+1))  # Assuming RFM has at least 3 features\n",
-    "optimal_n_components = 4  # Based on your previous analysis\n",
+    "n_components_range = range(1, min(5, rfm_scaled.shape[1]+1))  \n",
+    "optimal_n_components = 4  \n",
     "\n",
     "for n_components in n_components_range:\n",
     "    pca = PCA(n_components=n_components)\n",
@@ -619,7 +615,7 @@
     "    score = silhouette_score(rfm_pca, clusters)\n",
     "    silhouette_scores_pca[n_components] = score\n",
     "\n",
-    "# Plotting silhouette scores vs. PCA components\n",
+    "\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.plot(list(silhouette_scores_pca.keys()), list(silhouette_scores_pca.values()), marker='o')\n",
     "plt.xlabel('Number of PCA Components')\n",
@@ -627,15 +623,11 @@
     "plt.title('Silhouette Score vs. PCA Components')\n",
     "plt.show()\n",
     "\n",
-    "# 2. Advanced Feature Engineering (Conceptual)\n",
-    "# Assuming additional features are available in `df_additional`\n",
-    "# df = pd.read_csv('path_to_your_full_dataset.csv')\n",
-    "# Perform additional feature engineering here\n",
     "\n",
-    "# 3. Qualitatively Assess Cluster Characteristics\n",
-    "# This step requires manual analysis; review the centroids or most common values/features in each cluster\n",
     "\n",
-    "# 4. Explore Other Clustering Algorithms (Conceptual Example with DBSCAN)\n",
+    "\n",
+    "\n",
+    "\n",
     "from sklearn.cluster import DBSCAN\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
@@ -646,14 +638,14 @@
     "dbscan = DBSCAN(eps=0.5, min_samples=5)\n",
     "clusters_dbscan = dbscan.fit_predict(X_std)\n",
     "\n",
-    "# Assess clustering (for demonstration, silhouette might not be the best metric for DBSCAN due to noise points)\n",
-    "if len(np.unique(clusters_dbscan)) > 1:  # Ensure we have more than one cluster excluding noise\n",
+    "# Assess clustering\n",
+    "if len(np.unique(clusters_dbscan)) > 1: \n",
     "    score_dbscan = silhouette_score(X_std, clusters_dbscan)\n",
     "    print(f\"Silhouette Score with DBSCAN: {score_dbscan:.2f}\")\n",
     "else:\n",
     "    print(\"DBSCAN produced a single cluster or only noise.\")\n",
     "\n",
-    "# Note: Adjust DBSCAN parameters (`eps` and `min_samples`) based on the scale of your data and desired cluster granularity.\n"
+    "\n"
    ]
   },
   {
@@ -673,17 +665,17 @@
     }
    ],
    "source": [
-    "# Assuming the optimal number of PCA components is found (for demonstration, assume it's 2)\n",
-    "optimal_n_components = 2  # This should be set based on the silhouette scores from the previous step\n",
+    "\n",
+    "optimal_n_components = 2 \n",
     "\n",
     "pca = PCA(n_components=optimal_n_components)\n",
     "rfm_pca_optimal = pca.fit_transform(rfm_scaled)\n",
     "\n",
-    "# Re-fit GMM with the optimal number of PCA components\n",
-    "gmm_optimal = GaussianMixture(n_components=4, random_state=42)  # Using a fixed number of clusters for demonstration\n",
+    "\n",
+    "gmm_optimal = GaussianMixture(n_components=4, random_state=42)  \n",
     "clusters_optimal = gmm_optimal.fit_predict(rfm_pca_optimal)\n",
     "\n",
-    "# Visualizing the clusters\n",
+    "\n",
     "plt.figure(figsize=(10, 6))\n",
     "for i in range(max(clusters_optimal) + 1):\n",
     "    plt.scatter(rfm_pca_optimal[clusters_optimal == i, 0], rfm_pca_optimal[clusters_optimal == i, 1], label=f'Cluster {i}')\n",
@@ -700,8 +692,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assume 'rfm' is your DataFrame containing the original, unscaled RFM values\n",
-    "# For demonstration, we'll simulate this step\n",
+    "\n",
     "np.random.seed(42)\n",
     "rfm = pd.DataFrame({\n",
     "    'Recency': np.random.randint(1, 100, size=100),\n",
@@ -709,8 +700,8 @@
     "    'Monetary': np.random.randint(10, 1000, size=100)\n",
     "})\n",
     "\n",
-    "# Assign cluster labels to the original RFM DataFrame\n",
-    "rfm['Cluster'] = clusters_optimal  # Assuming 'clusters_optimal' is from your GMM clustering\n"
+    "\n",
+    "rfm['Cluster'] = clusters_optimal  \n"
    ]
   },
   {
@@ -732,7 +723,6 @@
    "source": [
     "import seaborn as sns\n",
     "\n",
-    "# Plotting the distributions of RFM values by cluster\n",
     "plt.figure(figsize=(18, 5))\n",
     "\n",
     "for i, feature in enumerate(['Recency', 'Frequency', 'Monetary'], 1):\n",
